[package]
name = "axfr2tf"
version = "0.1.0"
authors = ["Zack Angelo <zackangelo@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8.0"
clap = "2.33.0"
chrono = "0.4.6"
trust-dns = { git = "https://github.com/zackangelo/trust-dns.git", branch = "unknown_algo" }
log = "0.4.0"
env_logger = "0.6.1"
